Content Finished, Minor layout changes to come

--- a/index.html
+++ b/index.html
@@ -25,32 +25,57 @@
             </div>
         </section>
         <section class="second-section">
-            <h2>Tea of the Month</h2>
-            <h4>What's Steeping at The Tea Cozy</h4>
+            <div class="heading">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping at The Tea Cozy</h4>
+            </div >
             <div class="flex">
                 <div class="card">
-                    <img src="./img/img-berryblitz.jpg" alt="">
+                    <img src="./img/img-berryblitz.jpg" alt="A Berry Blitz Cup of Tea">
                     <h4>Fall Berry Blitz Tea</h4>
                 </div>
                 <div class="card">
-                    <img src="./img/img-spiced-rum.jpg" alt="">
+                    <img src="./img/img-spiced-rum.jpg" alt="A Box of Spiced Rum Tea">
                     <h4>Spiced Rum Tea</h4>
                 </div>
                 <div class="card">
-                    <img src="./img/img-donut.jpg" alt="">
+                    <img src="./img/img-donut.jpg" alt="A Seasonal Donut">
                     <h4>Seasonal Donuts</h4>
                 </div>
                 <div class="card">
-                    <img src="./img/img-myrtle-ave.jpg" alt="">
+                    <img src="./img/img-myrtle-ave.jpg" alt="A Myrtle Ave Tea">
                     <h4>Myrtle Ave Tea</h4>
                 </div>
-                <div class="card last">
-                    <img src="./img/img-bedford-bizarre.jpg" alt="">
+                <div class="card">
+                    <img src="./img/img-bedford-bizarre.jpg" alt="A Bedford Bizarre Tea">
                     <h4>Bedfored Bizarre Tea</h4>
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="third-section">
+            <div class="flex-address">
+                <img class="center" src="./img/img-locations-background.jpg" alt="A Cup of Coffee on a Table">
+                <h2 class="location-header">Locations</h2>
+                    <div class="location-card margin-left">
+                        <h3>Downtown</h3>
+                        <h4 class="address">384 West 4th St</h4>
+                        <h4 class="address">Suite 108</h4>
+                        <h4 class="address">Portland, Maine</h4>
+                    </div>
+                    <div class="location-card">
+                        <h3>East Bayside</h3>
+                        <h4 class="address">3433 Phiserman's Avenue</h4>
+                        <h4 class="address">(Northwest Corner))</h4>
+                        <h4 class="address">Portland, Maine</h4>
+                    </div>
+                    <div class="location-card margin-right">
+                        <h3>Oakdale</h3>
+                        <h4 class="address">515 Cresent Avenue</h4>
+                        <h4 class="address">Second Floor</h4>
+                        <h4 class="address">Portland, Maine</h4>
+                    </div>
+            </div>
+        </section>
     </main>
     <footer>
         <h2>The Tea Cozy</h2>
