image flex corrected

--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@
         </section>
     </main>
     <footer>
-        <h2>The Tea Cozy</h2>
-        <h3>contact@theteacozy.com</h3>
-        <h3>917-555‑8904</h3>
+        <section>
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555‑8904</h5>
+        </section>
+        <section id="copyright">
+            <h5>Copyright The Tea Company  2017</h5>
+        </section>
     </footer>
 </body>
 </html>
